--- a/index.html
+++ b/index.html
@@ -12,9 +12,20 @@
 </head>
 
 <body>
-
+    <h1>Categories</h1>
     <div class="input-group mb-3">
-        <input id="addIN" type="text" class="form-control" placeholder="Enter GIF To Search" aria-label="Add GIF" aria-describedby="basic-addon2">
+        <input id="addCAT" type="text" class="form-control" placeholder="Enter Category To Add" aria-label="Add Category" aria-describedby="basic-addon2">
+        <div class="input-group-append">
+            <button id="addCATBTN" class="btn btn-outline-secondary" type="button">Add Category</button>
+        </div>
+    </div>
+    <div id="showCAT">
+
+    </div>
+    <br>
+    <h1>GIF Items</h1>
+    <div class="input-group mb-3">
+        <input id="addIN" type="text" class="form-control" placeholder="Enter Item To Gif" aria-label="Add GIF" aria-describedby="basic-addon2">
         <div class="input-group-append">
             <button id="addGIF" class="btn btn-outline-secondary" type="button">Add GIF</button>
         </div>
